fixed flexbox layout bug

--- a/src/assets/styles/components/Countdown.css
+++ b/src/assets/styles/components/Countdown.css
@@ -7,6 +7,11 @@
   align-content: center;
 }
 
+.logo {
+  width: 100%;
+  text-align: center;
+}
+
 .logo img {
   height: 3rem;
   margin-bottom: 6rem;
